@@ -37,3 +37,5 @@ shutdown
 minit-update
 serdo
 ftrigger
+waitinterface
+waitport
